--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,7 @@ header {
 }
 
 .bannerIndex {
-  background-image: url(../assets/img/puertoMadero.jpg);
+  background-image: url(../assets/img/ba1.jpg);
   background-size: cover;
   filter: contrast(140%);
   filter: brightness(0.9);
